<resources>
    <string name="app_name">Movie Torrents</string>
    <string name="title_activity_movie_details" />
    <string name="etSearch_hint"><font size="12">Search by Title</font></string>
    <string name="full_screen_poster">Full Screen Poster</string>
    <string name="imdb_rating">IMDb Rating</string>
    <string name="genres">Genres</string>
    <string name="sort_by">Sort by</string>
    <string name="quality">Quality</string>
    <string name="search">Search</string>
    <string name="button_action">Choose the download button\'s action.</string>
    <string name="download_torrent_file_to_downloads_movie_torrents">Download .torrent file to downloads/movie torrents</string>
    <string name="download_icon">download icon</string>
    <string name="magnet_icon">magnet icon</string>
    <string name="open_magnet_link">Open\'s torrent\'s magnet link</string>
    <string name="share_icon">share icon</string>
    <string name="share_movie_links">Share movie links</string>
    <string name="mail_icon">mail icon</string>
    <string name="mail_movie_links_to">Mail movie links to:</string>
    <string name="placeholder_for_movie_poster">placeholder for movie poster</string>
    <string name="imdb_icon">Imdb icon</string>
    <string name="credits_image">Credits Image</string>
    <string name="menu_search">Search</string>
    <string name="menu_check_for_updates">Check for Updates</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_custom_sort_order">Custom Sort Order</string>
    <string name="menu_hd_poster_s">HD poster\'s</string>

    <string-array name="array_imdb_rating">
        <item>Any</item>
        <item>2.0+</item>
        <item>3.0+</item>
        <item>4.0+</item>
        <item>5.0+</item>
        <item>6.0+</item>
        <item>7.0+</item>
        <item>8.0+</item>
        <item>9.0+</item>
    </string-array>

    <string-array name="array_genre">
        <item>All</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Biography</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>Film-Noir</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Musical</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-Fi</item>
        <item>Sport</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>

    <string-array name="array_sort_by">
        <item>Date added</item>
        <item>Rating</item>
        <item>Download count</item>
        <item>Newest first</item>
        <item>Oldest first</item>
        <item>Alphabetically</item>
        <!--    <item>Peers</item>
        <item>Seeds</item>
        <item>Like count</item>-->
    </string-array>

    <string-array name="array_movie_quality">
        <item>1080p</item>
        <item>720p</item>
        <item>3D</item>
    </string-array>
</resources>
